# Yoradio_RGB_Panel

./: .gitattributes  .gitignore  MD80ET_GPIO_Pinout_EN_UTF8_BOM.md  README.md  README_4848S040.md  README_4848S040_english.md  README_JC3248W535C.md  README_JC3248W535C_english.md  README_UEDX48480021.md  README_UEDX48480021_english.md  ST7701_CURRENT_STATUS.md  platformio.ini  platformio_lwip_fix.ini  readme_english.md  session_summary_I2S_UEDX48480021_integration.md
.github/: copilot-instructions.md
boards/: esp32s3_n16r8.json  esp32s3_n4r8.json
data/www/: settings.html
panel_vendor_files/UEDX48480021-MD80ESP32-2.1inch-Touch-Knob-Display-main/: README.md
panel_vendor_files/UEDX48480021-MD80ESP32-2.1inch-Touch-Knob-Display-main/examples/ESP-IDF/DX48480021ET-WB-A-LVGL/main/: CMakeLists.txt
panel_vendor_files/UEDX48480021-MD80ESP32-2.1inch-Touch-Knob-Display-main/examples/ESP-IDF/DX48480021ET-WB-A-LVGL/main/ui/: ui.c
panel_vendor_files/UEDX48480021-MD80ESP32-2.1inch-Touch-Knob-Display-main/examples/ESP-IDF/DX48480021ET-WB-A-LVGL/main/ui/screens/: ui_Screen1.c  ui_working.c
src/: myoptions.h  myoptions_4848S040.h  myoptions_JC3248W535C.h  myoptions_UEDX48480021.h  myoptions_spectrum.h
src/src/: main.cpp
src/src/AXS15231B_touch/: AXS15231B_Touch.cpp  AXS15231B_Touch.h
src/src/Adafruit_CST8XX_Library/: Adafruit_CST8XX.cpp  Adafruit_CST8XX.h  CMakeLists.txt
src/src/AsyncWebServer/: AsyncTCP.cpp
src/src/GT911_Touchscreen/: TAMC_GT911.cpp
src/src/Perfmon/: esp32_perfmon.h  perfmon.c
src/src/audioI2S/: Audio.cpp  Audio.h
src/src/core/: config.cpp  (+18 more)
(+44 files in other folders)
